# BackUtecFinal

./: .dockerignore  .env.local.example  .gitignore  CHECKLIST.md  COMPLETION_SUMMARY.md  Dockerfile  LANGSMITH_INTEGRATION.md  README.md  SETUP_GUIDE.md  chat.py  fly.toml  gradio_gemini_app.py  langgraph.json  main.py  pyproject.toml  replacements.txt  requirements.txt  run_poc4.sh
.claude/: settings.local.json
.github/workflows/: deploy-backend.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docs/: ARCHITECTURE.md  graph_ascii.txt  graph_diagram.md
evaluation/: __init__.py  run_evaluation.py
scripts/: export_graph.py  load_product_images.py  seed_all_catalog.py  seed_coupons.py  seed_database.py  seed_districts.py  seed_local.py  seed_part1_sala_comedor.py  seed_part2_dormitorio_bano.py  seed_part3_cocina_electro.py  seed_part4_decoracion_iluminacion.py  seed_places.py  seed_places_lima.py  seed_santiago_complete.py  setup_delivery_slots.py  setup_test_data.py
src/: config.py  main.py
src/application/use_cases/: __init__.py
src/domain/: entities.py  repositories.py
src/infrastructure/cache/: __init__.py  memory_store.py
src/infrastructure/database/: models.py  mongodb.py  sqlite_db.py
src/infrastructure/langgraph/: __init__.py  graph.py  state.py
src/infrastructure/openai/: audio_client.py  http_client.py
src/infrastructure/repositories/: coupon_repository.py  customer_repository.py  order_repository.py  (+4 more)
src/presentation/: api.py
(+25 files in other folders)
